# ED

./: .gitignore  AnalizadorWeb.rar  CMakeLists.txt  Ordenamiento.rar
include/Datos/: GestorArchivos.h  Jugador.h  Tablero.h
include/Negocio/: GestorMemoria.h  Juego.h  Jugador.h  JugadorHumano.h  JugadorMaquina.h  LogicaJuego.h  Tablero.h
include/Presentacion/: Interaccion.h  Menus.h
src/: main.cpp
src/Datos/: GestorArchivos.cpp  Jugador.cpp  Tablero.cpp
src/Negocio/: GestorMemoria.cpp  Juego.cpp  Jugador.cpp  JugadorHumano.cpp  JugadorMaquina.cpp  LogicaJuego.cpp  Tablero.cpp
src/Presentacion/: Interaccion.cpp  Menus.cpp
